# stateEstimator

./: .gitignore  CMakeLists.txt  README.md  kalmanFilter.c  kalmanFilter.h  matrixMath.c  matrixMath.h
inc/: EKF.h  EKFStruct.h  kalmanFilter.h  matrixMath.h  utils.h
src/: EKF.c  kalmanFilter.c  matrixMath.c
test/: ekfMallocTest.c  ekfMatrixMathTest.c  ekfPersonWalkTest.c  ekfStaticInitTest.c
